infrastructure/base/configs/istio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik-system
      sectionName: websecure
  hostnames:
    - "kiali.${cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
